--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ body {
     background-color: #f0f2f5;
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
-    margin-top: -20px;
-    padding-top: 0;
+    margin-top: 20px;
+    padding-top: 20px;
 }
 
 .container {
@@ -199,7 +199,7 @@ button:hover {
 @supports (-webkit-touch-callout: none) {
     body {
         padding-bottom: env(safe-area-inset-bottom);
-        margin-top: -50px;
+        margin-top: 0px;
     }
     
     .header {
