--- a/style.css
+++ b/style.css
@@ -204,6 +204,7 @@ button:hover {
         padding-top: env(safe-area-inset-top);
         padding-bottom: env(safe-area-inset-bottom);
         margin-top: 0;
+        padding-bottom: calc(env(safe-area-inset-bottom) + var(--keyboard-height, 0px));
     }
     
     .header {
